kubernetes/apps/ghost/ghost/app/httproute-private.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  name: ghost
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - ghost.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghost
          port: 2368
