kubernetes/apps/ghost/ghost/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  name: ghost-public
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - blog.glimmerlabs.io
    - www.glimmerlabs.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghost
          port: 2368
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  name: ghost-apex
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - glimmerlabs.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: www.glimmerlabs.io
            statusCode: 301
