kubernetes/apps/ghost/ghost/app/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  name: ghost-public
spec:
  ingressClassName: traefik
  rules:
  - host: blog.glimmerlabs.io
    http:
      paths:
      - backend:
          service:
            name: ghost
            port:
              number: 2368
        path: /
        pathType: Prefix
  - host: www.glimmerlabs.io
    http:
      paths:
      - backend:
          service:
            name: ghost
            port:
              number: 2368
        path: /
        pathType: Prefix
  - host: glimmerlabs.io
    http:
      paths:
      - backend:
          service:
            name: ghost
            port:
              number: 2368
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - glimmerlabs.io
    secretName: glimmerlabs-io-production-tls
